[package]
name = "td2-map"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
glam = { version = "0.30.4", features = ["glam-assert"] }
nalgebra = "0.33.2"
svg = "0.18.0"
lazy-regex = "3.4.1"
rayon = "1.10.0"
indicatif = { version = "0.18.0", features = ["rayon"] }
phf = { version = "0.12.1", features = ["macros"] }
